--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-#index {
+body {
   background-image: url('../images/bg.jpg');
   max-width: 100%;
   max-height: 100%;
@@ -6,21 +6,7 @@
   background-attachment: fixed;
   background-size: cover;
 }
-  a.button {
-    border: 1px solid #1aa3ff;
-    color: #ffffff;
-    text-decoration: none;
-    border-radius: 10px;
-    background: #1aa3ff;
-    display: inline-block;
-    margin-left: 38%;
-    padding-right: 10%;
-    padding-left: 10%;
-    padding-bottom: 1%;
-    padding-top: 1%;
-    margin-bottom: 3%;
 
-}
 
 #img {
   display: block;
@@ -30,3 +16,5 @@
   display: block;
   margin-right: auto;
 }
+
+
